--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "@types/node": "^16.18.83",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "dompurify": "^3.0.9",
     "eslint": "^8.57.0",
+    "highlight.js": "^11.9.0",
+    "marked": "^12.0.1",
+    "marked-highlight": "^2.1.1",
+    "pygmentize-bundled": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
@@ -42,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/dompurify": "^3.0.5",
+    "@types/marked": "^6.0.0"
   }
 }
