--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.83",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "ace-builds": "^1.32.7",
     "dompurify": "^3.0.9",
     "eslint": "^8.57.0",
     "highlight.js": "^11.9.0",
@@ -18,6 +19,7 @@
     "marked-highlight": "^2.1.1",
     "pygmentize-bundled": "^2.3.0",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
