--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ai-coding-learning",
   "version": "0.1.0",
   "private": true,
+  "homepage": "codetutor.dacubeking.com",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.0",
     "@nyariv/sandboxjs": "^0.8.23",
@@ -28,6 +29,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -53,6 +56,7 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
-    "@types/marked": "^6.0.0"
+    "@types/marked": "^6.0.0",
+    "gh-pages": "^6.1.1"
   }
 }
