--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "dompurify": "^3.0.9",
     "eslint": "^8.57.0",
     "highlight.js": "^11.9.0",
+    "localforage": "^1.10.0",
     "marked": "^12.0.1",
     "marked-highlight": "^2.1.1",
+    "match-sorter": "^6.3.4",
     "pygmentize-bundled": "^1.2.0",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
