--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-scripts": "^5.0.1",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@react-buddy/ide-toolbox": "^2.4.0"
   },
   "scripts": {
     "predeploy": "npm run build",
