--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/node": "^16.18.83",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
+    "@types/katex": "^0.16.7",
     "ace-builds": "^1.32.7",
     "dompurify": "^3.0.9",
     "eslint": "^8.57.0",
     "highlight.js": "^11.9.0",
+    "katex": "^0.16.9",
     "localforage": "^1.10.0",
     "marked": "^12.0.1",
     "marked-highlight": "^2.1.1",
