--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/katex": "^0.16.7",
     "@types/node": "^16.18.83",
     "@types/react": "^18.2.58",
     "@types/react-dom": "^18.2.19",
-    "@types/katex": "^0.16.7",
     "ace-builds": "^1.32.7",
     "dompurify": "^3.0.9",
     "eslint": "^8.57.0",
@@ -32,6 +32,7 @@
     "react-scripts": "^5.0.1",
     "sort-by": "^1.2.0",
     "typescript": "^4.9.5",
+    "vm-browserify": "^1.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
