--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.15.14",
     "@nyariv/sandboxjs": "^0.8.23",
     "@react-buddy/ide-toolbox": "^2.4.0",
+    "@react-buddy/palette-mui": "^5.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -36,15 +37,17 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "sort-by": "^1.2.0",
+    "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vm-browserify": "^1.1.2",
-    "web-vitals": "^2.1.4",
-    "@react-buddy/palette-mui": "^5.0.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build && shx cp build/index.html build/404.html",
     "deploy": "gh-pages -d build",
+    "prestart": "node generateProblemLocations.js",
     "start": "react-scripts start",
+    "prebuild": "node generateProblemLocations.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
