--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@types/react-dom": "^18.2.19",
     "ace-builds": "^1.32.7",
     "dompurify": "^3.0.9",
+    "escape-html": "^1.0.3",
     "eslint": "^8.57.0",
+    "he": "^1.2.0",
     "highlight.js": "^11.9.0",
     "install": "^0.13.0",
     "katex": "^0.16.9",
     "localforage": "^1.10.0",
     "marked": "^12.0.1",
     "marked-highlight": "^2.1.1",
+    "marked-katex-extension": "^5.0.1",
     "match-sorter": "^6.3.4",
     "npm": "^10.5.0",
     "pygmentize-bundled": "^1.2.0",
@@ -72,6 +75,8 @@
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
+    "@types/escape-html": "^1.0.4",
+    "@types/he": "^1.2.3",
     "@types/marked": "^6.0.0",
     "gh-pages": "^6.1.1",
     "shx": "^0.3.4"
