--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@nyariv/sandboxjs": "^0.8.23",
     "@react-buddy/ide-toolbox": "^2.4.0",
     "@react-buddy/palette-mui": "^5.0.1",
-    "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
@@ -38,7 +37,6 @@
     "react-ace": "^10.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
     "sort-by": "^1.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
@@ -79,6 +77,7 @@
     "@types/he": "^1.2.3",
     "@types/marked": "^6.0.0",
     "gh-pages": "^6.1.1",
-    "shx": "^0.3.4"
+    "shx": "^0.3.4",
+    "react-scripts": "^5.0.1"
   }
 }
