--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0",
+    "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "vm-browserify": "^1.1.2",
@@ -77,7 +78,7 @@
     "@types/he": "^1.2.3",
     "@types/marked": "^6.0.0",
     "gh-pages": "^6.1.1",
-    "shx": "^0.3.4",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "shx": "^0.3.4"
   }
 }
