--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.12",
     "@types/dompurify": "^3.0.5",
     "@types/escape-html": "^1.0.4",
     "@types/he": "^1.2.3",
