--- a/.github/build.yml
+++ b/.github/build.yml
@@ -1,10 +1,12 @@
 name: Build & Test
 on: push
-steps:
-- uses: actions/checkout@v4
-- uses: actions/setup-node@v4
-  with:
-    node-version: 18
-- run: npm ci
-- run: npm run build
-- run: npm test
+jobs:
+  node:
+    steps:
+    - uses: actions/checkout@v4
+    - uses: actions/setup-node@v4
+      with:
+        node-version: 18
+    - run: npm ci
+    - run: npm run build
+    - run: npm test
