--- a/.github/build.yml
+++ b/.github/build.yml
@@ -2,11 +2,13 @@ name: Build & Test
 on: push
 jobs:
   node:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version-file: 'package.json'
+        cache: 'npm'
     - run: npm ci
     - run: npm run build
     - run: npm test
