--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "node": ">=21.6.0",
+    "npm": ">=10.0.0"
+  },
   "name": "ai-coding-learning",
   "version": "0.1.0",
   "private": true,
