--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
     "sort-by": "^1.2.0",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "predeploy": "npm run build && shx cp build/index.html build/404.html",
     "deploy": "gh-pages -d build",
     "prestart": "node generateProblemLocations.js",
