--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18.3.0",
     "ace-builds": "^1.32.7",
+    "capture-console-logs": "^2.0.1-rc.1",
     "dompurify": "^3.0.9",
     "eslint": "^8.57.0",
     "he": "^1.2.0",
@@ -45,6 +46,7 @@
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
+    "util": "^0.12.5",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
