--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@types/react": "^18.2.69",
     "@types/react-dom": "^18.3.0",
     "ace-builds": "^1.32.7",
+    "acorn": "^8.11.3",
+    "acorn-loose": "^8.4.0",
     "capture-console-logs": "^2.0.1-rc.1",
     "dompurify": "^3.0.9",
     "eslint": "^8.57.0",
